# chat

./: .gitignore  CMakeLists.txt  READ.md  README.md  Task.txt  aheader.h  algorithm.md  logicheck.cpp  login  makefile  test  test.cpp
chat/DEBIAN/: control
check/: CMakeLists.txt  check.cpp  check.h
command/: CMakeLists.txt  command.cpp
function/: CMakeLists.txt  function.cpp
include/: check.cpp  check.h  command.cpp  command.h  function.h  logFile.cpp  logFile.h  loger.cpp  loger.h  offline.cpp  offline.h  onlineList.cpp  onlineList.h  protocol.cpp  protocol.h  session.cpp  session.h  timer.cpp  timer.h  unconfirm.cpp  unconfirm.h  user.cpp  user.h
libs/: Client.cpp  Client.h  Reader.cpp  Reader.h  Session.cpp  Session.h  Talk.cpp  Talk.h  User.cpp  User.h  aheader.h  check.cpp  check.h  class.cpp  class.h  command.cpp  command.h  function.cpp  function.h  offline.cpp  offline.h  onlineList.cpp  onlineList.h  protocol.cpp  protocol.h  session.cpp  session.h  struct.cpp  struct.h  talk.cpp  talk.h  timer.cpp  timer.h  unconfirm.cpp  unconfirm.h  user.cpp  user.h
offline/: Andrey.txt  CMakeLists.txt  offline.cpp
offlineTXT/: Andrey.txt
onlineList/: CMakeLists.txt  onlineList.cpp
protocol/: CMakeLists.txt  protocol.cpp
session/: CMakeLists.txt  session.cpp  session.h
src/: chat.cpp  client.cpp  clientChat.cpp  fileSchat.cpp  server.cpp  socket.cpp
srcc/: class.cpp  class.h  client.cpp  server.cpp
testProject/check/: buffer.cpp  client  client.cpp  exitClient.cpp  keepAlive.cpp  server  socket.cpp
testProject/function/: fileSize.cpp  fromString.cpp  parse  parse.cpp  toString.cpp
testProject/struct/: initCli  initCli.cpp  initServ  initServ.cpp  login  login.cpp  user  user.cpp
testProject/talk/: handle.cpp  talk.cpp
testProject/testing/: client  client.cpp  delet  dist  server  server.cpp  size  sizeof  socket.cpp  val  vector.cpp
timer/: CMakeLists.txt  timer.cpp
trash/: chat.cpp  client.cpp  clientChat.cpp  server.cpp  socket.cpp  struct.cpp  struct.h  talk.cpp  talk.h
user/: CMakeLists.txt  user.cpp
